# notes

./: package-lock.json  package.json  readme  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LoadingSpinner.tsx  NoteEditor.tsx  NoteList.tsx  ShareDialog.tsx  SyncNotificationList.tsx
src/hooks/: useNotes.ts  usePeers.ts  useSyncNotifications.ts  useUndoRedo.ts
src/types/: index.ts
src/utils/: dateFormat.ts
