[package]
name = "notes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2.4.3"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2.0.5"
tauri-plugin-persisted-scope = "2.0.3"
local-ip-address = "0.5.6"
mdns-sd = "0.7.4"
chrono = "0.4.31"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
axum = "0.7.4"
hostname = "0.3.1"
tower = "0.4.13"

